--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>My first ever website</h1>
+    <p>Hey I can push commit in github</p>
 </body>
 </html>
