--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Website</title>
+    <link rel="stylesheet" href="css/web-size.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>My first ever website</h1>
-    <p>Hey I can push commit in github</p>
-
+    <div id="container">
+        <div class="logo">
+            <img id="img2" src="asset/logo.svg" alt="logo">
+        </div>
+        <div class="navbar">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">WORKS</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
