--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
             <img id="img2" src="asset/logo.svg" alt="logo">
         </div>
         <div class="navbar">
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">WORKS</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">WORK</a>
+            <a href="#">CONTACT</a>
         </div>
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, voluptate asperiores quidem neque similique nisi officia magni quasi, minus quas fuga aut velit numquam blanditiis, libero architecto suscipit a voluptates!</P>
     </div>
 </body>
 </html>
