--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <img id="img2" src="asset/logo.svg" alt="logo">
         </div>
         <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, voluptate asperiores quidem neque similique nisi officia magni quasi, minus quas fuga aut velit numquam blanditiis, libero architecto suscipit a voluptates!</P>
+        <nav>
+            <li></li>
+            <li></li>
+            <li></li>
+        </nav>
     </div>
 </body>
 </html>
