--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
-    <link rel="stylesheet" href="css/web-size.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div id="container">
-        <div class="logo">
-            <img id="img2" src="asset/logo.svg" alt="logo">
-        </div>
-        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, voluptate asperiores quidem neque similique nisi officia magni quasi, minus quas fuga aut velit numquam blanditiis, libero architecto suscipit a voluptates!</P>
-        <nav>
-            <li></li>
-            <li></li>
-            <li></li>
-        </nav>
-    </div>
-</body>
-</html>
+<button>Click Me</button>
