--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>I'm just developing</title>
+    <style>
+        body{
+            background-color: #222;
+        }
+        h1 {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 2em;
+            text-align: center;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>This is heading</h1>
+    <h1>404 Not Found</h1>
 </body>
 </html>
