--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         }
         h1 {
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 2em;
+            font-size: 4em;
             text-align: center;
-
+            color: white;
 
         }
     </style>
