--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             font-size: 4em;
             text-align: center;
             color: white;
+            margin: 0 auto;
 
         }
     </style>
